<resources>
    <string name="app_name">Click to rent </string>
    <string name="service">Prestation serv.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prestation">prestat.</string>
    <string name="restauration">Restau.</string>
    <string name="voituration">voitur.</string>
    <string name="Atitre">Click to rent</string>
    <string name="titre">Techniciens Batiment</string>
    <string name="info">Informatique</string>

    <string name="label">Saisissez le titre de votre service</string>
    <string name="select_category">Catégorie</string>
    <string name="description">Décrivez brièvement votre service Svp</string>

    <string name="email_con">Email :</string>
    <string name="email_hint">email:</string>
    <string name="bt_conn_valider">Send</string>
    <string name="textview_creer_compte">Create your account here </string>
    <string name="facebook">Facebook</string>
    <string name="google">google</string>
    <string name="input_connexion">input connexion</string>
    <string name="btn_se_connecter">Se connecter</string>
    <string name="password">Mot de passe</string>
    <string name="signin">Connexion</string>
    <string name="password_confirm">Confirmez</string>
    <string name="sign_up_con" translatable="false">Sign Up</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam asperiores delectus dolor dolore expedita explicabo hic in, officia pariatur possimus praesentium provident quaerat quasi suscipit tenetur totam unde vitae? Distinctio.</string>
    <string name="confirm_user_info">Confirmer vos infos</string>
    <string name="username">username</string>
    <string name="name_hint">richard fopa</string>
    <string name="username_description">Description du nom d\'utilisateur</string>
    <string name="btn_confirmer_infos">Confirmer</string>
    <string name="btn_parcourir_photo">Parcourir</string>

    <string name="item_description">description</string>
    <string name="profile_title">Ndikadaniel01@gmail.com</string>
    <string name="profile_deconnexion">Deconnexion</string>
    <string name="profile_comment">Liste des commentaires</string>
    <string name="profile_history">Historique des Clients</string>
    <string name="profil_edit">Modifiez le profil</string>
    <string name="nom_label">Nom</string>
    <string name="phone_label">Téléphone Mobile</string>
    <string name="email_label">Adresse Email</string>
    <string name="page_title">Vos informations</string>
    <string name="edit_button">Modifier</string>
    <string name="profile_service_list">Liste des services</string>
    <string name="sexe">sexe</string>
    <string name="civilite">civilite</string>
    <string name="adresse">Adresse</string>
    <string name="ville">Ville</string>
    <string name="item_historique_description">Service Rendu</string>
    <string name="item_historique_note">Note</string>

    <string name="telephone">telephone</string>


    <string name="description_prestation">Designer 3D</string>
    <string name="intitule">Faites vos montages graphiques</string>
    <string name="date_du_jour">19/11/2021</string>
    <string name="ajoutez_une_photo">Ajoutez une photo</string>

    <string name="photo_service">Photo Service</string>
    <string name="search_hint">service name, or prestataire</string>
    <string name="app_label">search</string>

    <string name="valider">Valider</string>


    <string name="password_hint">password</string>
    <string name="textview_passe_oublier">Mot de passe oublié</string>
    <string name="create_up_con">Create a new account</string>
    <string name="nom_hint">name</string>
    <string name="bt_conn_login">Login</string>
    <string name="forget_up_con">Reset your password</string>
    <string name="text_passe_oublier">Cliquez sur le bouton RESET pour réinitialiser votre mot de passe, vous allez recevoir un mail de réinitialiseation votre mot de passe</string>
    <string name="bt_conn_reset">reset</string>
    <string name="phone">Telephone</string>
    <string name="search">search</string>
    <string name="add_service_FORM">Ajouter votre service</string>
    <string name="label_title_service">Titre du service</string>
    <string name="textdoc">Faites une capture d\'ecran de votre CV</string>
    <string name="choisir_votre_photo_de_profil">Photo descriptive de votre service</string>
    <string name="nomdesc" />
    <string name="descriptionDetails" />
    <string name="titreProfil" />
    <string name="afficheDetails" />
    <string name="mValider">Contactez-nous</string>
    <string name="Vnumero">Votre e-mail</string>
    <string name="Vnom">Votre nom</string>
    <string name="appel">Appels</string>
    <string name="sms">SMS</string>
    <string name="choisir_votre_photo">Choisir votre photo de profil (optionnel)</string>

    <string name="txtDescription">Description</string>
    <string name="plombier">Plombier</string>
    <string name="DESCRIPTION">Description</string>
    <string name="NOTE">NOTE</string>
    <string name="note">Notez-ici:</string>
    <string name="Annuler">Annuler</string>
    <string name="Validation">Valider</string>
    <string name="txtCommentaire">Saisissez un commentaire pour qui nous permettra d\'améliorer votre l\'application:</string>
    <string name="ReserverTitle">Votre satisfaction en quelques cliques</string>
    <string name="hint_commentaire">Saisissez votre commentaire ici.</string>
    <string name="plomberie">Plomberie</string>

    <string name="autres">Autres</string>
    <string name="services">services</string>
    <string name="categorie">categorie</string>
    <string name="Plombrie">Plomberie</string>
    <string name="menuiserie">Menuiserie</string>
    <string name="maconnerie">Maconnerie</string>
    <string name="informatique">Informatique</string>
    <string name="electricite">Electricite</string>
    <string name="votreadresse">Votre adresse</string>
    <string name="adressehint">Douala logpom</string>
    <string name="revenez">Revenez quand vous voullez</string>


    <string name="liste_des_services">Liste des Services</string>
</resources>