<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:foregroundGravity="center"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/forget_up_con"
                android:textColor="@color/color_blue"
                android:textSize="30sp"
                android:textStyle="normal" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edittextusername_con"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/email_hint"
                app:boxStrokeColor="@color/color_blue"
                app:boxStrokeErrorColor="@color/black"
                app:hintTextColor="@color/color_blue"
                app:shapeAppearanceOverlay="@style/roundedTextAndInput"
                app:startIconDrawable="@drawable/ic_baseline_mail_24"
                app:startIconTint="@color/color_blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/input_connexion"
                    android:inputType="textWebEmailAddress"
                    android:shadowRadius="20"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/color_blue"
                    android:textSize="@dimen/text_input_size"
                    android:textStyle="normal"
                    app:startIconDrawable="@drawable/ic_baseline_mail_24"
                    tools:ignore="EditableContentDescCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btn_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:shadowRadius="1"
                android:text="@string/bt_conn_reset"
                android:textColor="@color/white"
                android:textStyle="normal"
                app:backgroundTint="@color/color_blue"
                app:cornerRadius="20dp"
                app:strokeColor="@color/background_grise"
                app:strokeWidth="@dimen/border_button"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/forget_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25sp"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/text_passe_oublier"
                android:textColor="@color/grey"
                android:textStyle="normal" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>