<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="380sp"
    android:id="@+id/monDialog"
    app:circularflow_defaultRadius="20sp"
    app:circularflow_radiusInDP="5sp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:background="@color/bleu_clair"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="2sp"
        app:shapeAppearanceOverlay="@style/roundedTextAndInput">

        <TextView
            android:id="@+id/NomProfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80sp"
            android:text="@string/Vnom"
            android:textColor="@color/gris_fonce"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/emailProfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="10sp"
            android:text="@string/Vnumero"
            android:textColor="@color/gris_fonce"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnCalls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="0sp"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableLeft="@drawable/call_24"
            android:text="@string/appel"
            android:textAlignment="textStart"
            android:textColor="@color/gris_fonce"
            android:textSize="20sp"
            app:backgroundTint="@color/white"
            tools:ignore="TextContrastCheck" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2sp"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/btnSms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableLeft="@drawable/message_24"
            android:text="@string/sms"
            android:textAlignment="textStart"
            android:textColor="@color/gris_fonce"
            android:textSize="20sp"
            android:textStyle="normal"
            app:backgroundTint="@color/white"
            tools:ignore="TextContrastCheck" />


    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/detailsContact"
        android:layout_width="110sp"
        android:layout_height="110sp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/elect"
        app:civ_border_color="@color/color_blue"
        app:civ_border_width="0.5dp" />
</RelativeLayout>