<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@color/color_blue">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:paddingTop="32dp"
            app:srcCompat="@drawable/techniciens" />

        <TextView
            android:id="@+id/profile_image_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="16dp"
            android:text="@string/profile_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:divider="@drawable/divider"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="editProfile"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/profile_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/outline_edit_black_24"
                android:drawableRight="@drawable/outline_chevron_right_black_24"
                android:paddingTop="8dp"
                android:gravity="center"
                android:textSize="25sp"
                android:text="@string/profil_edit" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:onClick="showServiceList">

            <TextView
                android:id="@+id/prodile_service_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:drawableLeft="@drawable/outline_construction_black_24"
                android:drawableRight="@drawable/outline_chevron_right_black_24"
                android:gravity="center"
                android:textSize="25sp"
                android:text="@string/profile_service_list" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:onClick="viewCommentList">

            <TextView
                android:id="@+id/profile_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/outline_comment_black_24"
                android:drawableRight="@drawable/outline_chevron_right_black_24"
                android:gravity="center"
                android:textSize="25sp"
                android:paddingTop="8dp"
                android:text="@string/profile_comment" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:onClick="showHistoriqueClient">

            <TextView
                android:id="@+id/profile_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/outline_history_black_24"
                android:drawableRight="@drawable/outline_chevron_right_black_24"
                android:gravity="center"
                android:textSize="25sp"
                android:paddingTop="8dp"
                android:text="@string/profile_history" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:divider="@drawable/divider"
        android:showDividers="beginning">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/deconnexion_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/outline_logout_black_24"
                android:text="@string/profile_deconnexion"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.235" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>