<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/maTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:background="@color/color_blue"
        android:clickable="true"
        android:elevation="20sp"
        android:foregroundGravity="fill_horizontal"
        android:scrollbarSize="50sp"
        android:scrollbarStyle="insideOverlay"
        app:itemBackground="@color/color_blue"
        app:itemTextColor="@drawable/selection"
        app:layout_anchorGravity="fill_horizontal"
        app:tabGravity="fill"
        app:tabIconTint="@color/white"
        app:tabIndicatorColor="@color/white"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/menu_tab">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="fill"
            android:icon="@drawable/outline_construction_black_24"
            android:text="@string/prestation"
            android:textAlignment="center" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:icon="@drawable/nourriture_et_restaurant1"
            android:text="@string/restauration"
            android:textAlignment="center" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:icon="@drawable/local_taxi_24"
            android:text="@string/voituration"
            android:textAlignment="center" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/nom_de_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80sp"></androidx.viewpager2.widget.ViewPager2>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
