<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnexionmdpActivity">

    <ScrollView
        android:id="@+id/scrollView_connecter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:foregroundGravity="center"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab_bold"
                android:gravity="center"
                android:text="@string/sign_up_con"
                android:textColor="#039BE5"
                android:textSize="50sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edittextemail_con"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxStrokeColor="@color/theme_color"
                app:boxStrokeErrorColor="@color/black"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="20dp"
                app:hintTextColor="@color/theme_color"
                app:startIconTint="@color/theme_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Edittext_passwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:contentDescription="@string/input_connexion"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:inputType="textPassword"
                    android:shadowRadius="20"
                    android:textColor="@color/theme_color"
                    android:textColorHint="@color/theme_color"
                    android:textSize="18sp"
                    app:startIconDrawable="@drawable/ic_key_24"
                    tools:ignore="EditableContentDescCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_con_valider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_slab_bold"
                android:shadowRadius="1"
                android:text="@string/btn_se_connecter"
                android:textColor="@color/white"
                app:cornerRadius="20dp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>